--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="note_deleted">Note deleted</string>
     <string name="note">Note</string>
     <string name="start_typing_here">Start typing here…</string>
+    <string name="action_save">Save note</string>
+    <string name="note_saved">Note saved</string>
+    <string name="all_notes_deleted">All notes deleted</string>
+    <string name="not_saved">Did not save empty note</string>
 </resources>
